update credit link

--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
   <p>Daniel: "When do I learn how to punch?"</p>
   <p>Miyagi: "Better learn balance. Balance is key. Balance good, karate good. Everything good. Balance bad, better pack up, go home. Understand?" </p>
 
-<p>Site designed forked from <a href="http://dan.dyne.org" target="_blank">Dan Hassan</a>.</p>
 </article>
-<p> All materials are free to share
-  Creative Commons <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="blank">(BY-NC-SA 3.0)</a>.
+
+<p> Site designed forked from <a href="https://github.com/dan-mi-sun/danielsan.dyne.org" target="_blank">Dan Hassan</a>. All materials are free to share: Creative Commons <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="blank">(BY-NC-SA 3.0)</a>.
 </p>
 
 </body>
