--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <a href="https://onename.com/troyth" target="_blank">@troyth</a>
     </li>
     <li>
-      <strong>CV available:</strong>
-      <a href="http://danielsan.dyne.org/web/cv/daniel_hassan_cv_jan2016.pdf" target="_blank">here</a>
+      <strong>Curriculum Vitae:</strong>
+      <a href="https://drive.google.com/open?id=0B9TSh9uOIaD3NlFHanZaMU8tcGs" target="_blank">here</a>
     </li>
   </ul>
 
