--- a/index.html
+++ b/index.html
@@ -13,33 +13,43 @@
 <body>
 <article>
   <h1>Troy Conrad Therrien: curator of architecture and digital initiatives <a href="https://twitter.com/guggenheim" target="_blank">@Guggenheim</a>; adjunct professor of architecture <a href="https://twitter.com/columbiagsapp" target="_blank">@ColumbiaGSAPP</a></h1>
+
   <p>v0.1</p>
- <hr />
-  <p class="header"><a href="">short bio:</a></p>
-  <div class="content">
-    <p><a href="http://troyth.us/" target="_blank">Troy Conrad Therrien</a> (born Vancouver, CA; currently New York, US), is a computer engineer active in autonomous co-operatives over the last decade; in areas of economics (<a href="http://www.rootstock.org.uk/" target="_blank">Rootstock</a>, <a href="http://robinhoodcoop.org/" target="_blank">Robin Hood Coop</a>, <a href="http://ecsa.io/" target="_blank">Economic Space Agency</a>,  <a href="http://www.enspiral.com/" target="_blank">Enspiral</a>), housing (<a href="http://www.radicalroutes.org.uk/" target="_blank">Radical Routes</a>), migration (No Borders) & labour (<a href="http://www.footprinters.co.uk/" target="_blank">Footprint Workers Coop</a>). Currently researching blockchains & data analysis for <a href="https://dyne.org/" target="_blank">Dyne</a>, <a href="http://robinhoodcoop.org/" target="_blank">Robin Hood Coop</a> & <a href="http://westernsydney.edu.au/ics" target="_blank">University of Western Sydney | Institute for Culture & Society</a>. Caretaker of <a href="https://www.bigchaindb.com/" target="_blank">Public BigchainDB</a> as part of the <a href="https://ipdb.foundation/" target="_blank">IPDB Foundation</a>; Board Member of <a href="http://robinhoodcoop.org" target="_blank">Robin Hood Coop</a>.</p>
+
+  <hr />
+
+  <div class="container">
+    <p class="header"><a href="">bio (current):</a></p>
+    <div class="content">
+      <p>Troy Conrad Therrien (b. 1981): Initially trained in computer engineering and commerce, and later in architecture design, history, and theory, his work since has combined these three fields. He is currently Curator of Architecture and Digital Initiatives at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum</a> where he organized the museum’s first ever online exhibition, <em><a href="http://azone.guggenheim.org/" target="_blank">Åzone Futures Market</a><em>, and is currently working on forthcoming exhibitions of architecture, art, and technology in New York and Bilbao. He is Adjunct Professor of Architecture at the <a href="https://www.arch.columbia.edu" target="_blank">Columbia University Graduate School of Architecture, Planning and Preservation</a> where he teaches seminars on the consequences of contemporary techno-culture on architecture and its deep history and immediate future. He is currently a member of the United Nations Global Network on Digital Technologies for Sustainable Urbanization (iTSUN), and regularly publishes, serves on awards juries, and speaks internationally.</p>
+    </div>
   </div>
 
   <hr class="small" />
 
-  <p class="header"><a href="">medium bio:</a></p>
-  <div class="content">
-    <p><a href="http://troyth.us/" target="_blank">Dan Hassan</a> (UK|GUY); London and Melbourne based community organiser and computer engineer, passionate about <a href="http://robinhoodcoop.org/" target="_blank">Robin Hood</a> as a new mode of organization enabled by P2P finance and ubiquitous computing. Has been active in autonomous co-operatives for over a decade, specifically in areas of economics (<a href="http://www.rootstock.org.uk/" target="_blank">Rootstock</a>, <a href="http://robinhoodcoop.org/" target="_blank">Robin Hood</a>), housing (<a href="http://www.radicalroutes.org.uk/" target="_blank">Radical Routes</a>), food (Food not Bombs), migration (No Borders), labour (<a href="http://www.footprinters.co.uk/" target="_blank">Footprint Workers Coop</a>) and social centres around the UK and Australia. Robin Hood's innovations in P2P finance resonate strongly with Dan's research into new modes of organisation enabled by the emergence of network platforms, blockchain technologies and ubiquitous computing. In 2015 he became a member of RHC's Board of Directors, replacing <a href="https://en.wikipedia.org/wiki/Tiziana_Terranova" target="_blank">Tiziana Terranova</a>. His MSc thesis: 'Assembling data: An application for understanding and analysing the block chain beyond cryptocurrency' forms a key research component of Decentralized Citizen Engagement Technologies (<a href="http://dcentproject.eu/" target="_blank">D-CENT</a>), an EU funded Europe-wide project creating blockchain based privacy-aware tools and applications for economic empowerment.</p>
-    <p>He is also a resident consultant with the <a href="https://www.dyne.org/" target="_blank">Dyne Think(&Do) Tank</a>, advising on digital currency experiments to foster direct democracy.</p>
+  <div class="container">
+    <p class="header"><a href="">bio (past):</a></p>
+    <div class="content">
+      <p>He has been a hired gun for <a href="http://www.brucemaudesign.com/" target="_blank">Bruce Mau Design</a>; a trend forecaster for <a href="https://www.audi.de/de/brand/de.html" target="_blank">Audi</a>; an architectural designer in <a href="http://edouardfrancois.com/" target="_blank">Paris</a>, New York, and <a href="http://www.ijpcorporation.com/" target="_blank">London</a>; a computational mathematics researcher at a <a href="http://hct.ece.ubc.ca/" target="_blank">Human Computer Interaction Lab</a>; an editor of the <a href="http://www.arpajournal.net/" target="_blank">Advanced Research Practices in Architecture Journal</a>; co-founder of the Architecture Online Lab, director of The Energy Issue initiative, and co-curator the <a href="http://experimentsinmotion.com/" target="_blank">Experiments in Motion</a> initiative at Columbia; and co-founder of Therrien–Barley (now <a href="http://consortia.net/" target="_blank">Consortia</a>), an innovation and design agency servicing Fortune 500 design and technology companies. He received an MA in Architecture History and Theory from the <a href="http://www.aaschool.ac.uk/" target="_blank">Architectural Association</a> in London, an MArch from <a href="https://www.arch.columbia.edu" target="_blank">Columbia University</a>, where he received the American Institute of Architects Medal, and a BASc in Computer Engineering from the <a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a>.</p>
+    </div>
   </div>
-
+  
   <hr class="small" />
 
   <p class="header"><a href="">longer bio:</a></p>
   <div class="content">
-    <p><a href="http://danielsan.dyne.org/" target="_blank">Dan Hassan</a> (UK|GUY) is a community organiser and computer engineer. He has been active in autonomous co-operatives for over a decade, specifically in areas of economics (<a href="http://www.rootstock.org.uk/" target="_blank">Rootstock</a>, <a href="http://robinhoodcoop.org/" target="_blank">Robin Hood</a>), housing (<a href="http://www.radicalroutes.org.uk/" target="_blank">Radical Routes</a>), food (Food not Bombs), migration (No Borders), labour (<a href="http://www.footprinters.co.uk/" target="_blank">Footprint Workers Coop</a>) and social centres around the UK and Australia. He has a particular interest in how people collectively self-determine their own living and working conditions. He tweets as <a href="https://twitter.com/dan_mi_sun" target="_blank">@dan_mi_sun</a> </p>
-    <p>Dan is currently an engineer with <a href="http://robinhoodcoop.org/" target="_blank">Robin Hood Minor Asset Management Cooperative</a>, an activist hedge fund that uses financial technologies to democratise finance, expand financial inclusion and generate new economic spaces. Through analysis of big data, development of algorithms, and deployment of web-based technologies such as blockchains Robin Hood aims to compose new financial instruments that can help to redistribute common wealth among groups committed to political, economic and social change. In 2015 he became a member of RHC's Board of Directors, replacing <a href="https://en.wikipedia.org/wiki/Tiziana_Terranova" target="_blank">Tiziana Terranova</a>. In his collaboration with Robin Hood he recently co-founded the Member Market, a service built on blockchain allowing members of Robin Hood to trade shares, bringing liquidity and easy auditing to the co-operative system.</p>
-    <p>Alongside Robin Hood Dan is a collaborator in groups bringing together issues of big data, politics and privacy. His MSc thesis: 'Assembling data: An application for understanding and analysing the block chain beyond cryptocurrency' forms a key research component of <a href="http://dcentproject.eu/" target="_blank">D-CENT</a>, an EU funded Europe-wide project creating privacy-aware tools and applications for economic empowerment. Together with EU citizens and developers, the project aims to build a decentralised social networking platform for large-scale collaboration and decision-making.</p>
-    <p>He is also a resident consultant with the <a href="https://www.dyne.org/" target="_blank">Dyne Think(&Do) Tank</a>, advising on digital currency experiments to foster direct democracy across Europe. As an open-source approach to decentralized complementary currency design, Dyne works with grassroots organisations experimenting with digital social currency. Through this work, Dyne shows how human decisions deeply influence the behaviour of algorithms and seeks to place anti-racist, anti-classist and anti-sexist values at the heart of algorithm production.</p>
+    <p></p>
   </div>
 
-  <h2>web | <a href="https://www.guggenheim.org/" target="_blank">guggenheim.org</a>, <a href="https://www.arch.columbia.edu" target="_blank">arch.columbia.edu</a></h2>
   <ul>
+    <li>
+      <strong>current orgs:</strong>
+        <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum</a>, <a href="https://www.arch.columbia.edu" target="_blank">Columbia University Graduate School of Architecture, Planning and Preservation</a>
+    </li>
+    <li>
+      <strong>past orgs:</strong>
+        <a href="http://consortia.net/" target="_blank">Consortia (formerly Therrien–Barley)</a>, <a href="http://www.aaschool.ac.uk/" target="_blank">Architectural Association</a>, <a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a>
+    </li>
     <li>
       <strong>email:</strong>
         tctherrien(at)<a href="mailto:tctherrien@guggenheim.org">guggenheim.org</a>, tct2003(at)<a href="mailto:tct2003@columbia.edu">columbia.edu</a>
@@ -79,7 +89,7 @@
     </li>
     <li>
       <strong>Curriculum Vitae:</strong>
-      <a href="https://drive.google.com/open?id=0B9TSh9uOIaD3NlFHanZaMU8tcGs" target="_blank">here</a>
+      <a href="https://drive.google.com/open?id=0B9TSh9uOIaD3NlFHanZaMU8tcGs" target="_blank">PDF 	&#128279;</a>
     </li>
   </ul>
 
